--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=RegioEditor
+application.vendor=samuelchen
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,19 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/RegioEditor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.javax.json-1.0.4.jar=/Users/samuelchen/Documents/cse 219 hw/javax.json-1.0.4.jar
+file.reference.PropertiesManager.jar=/Users/samuelchen/Documents/cse 219 hw/PropertiesManager/dist/PropertiesManager.jar
+file.reference.SimpleAppFramework.jar=/Users/samuelchen/Documents/cse 219 hw/SimpleAppFramework/dist/SimpleAppFramework.jar
+file.reference.XMLUtilities.jar=/Users/samuelchen/Documents/cse 219 hw/XMLUtilities/dist/XMLUtilities.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.SimpleAppFramework.jar}:\
+    ${file.reference.javax.json-1.0.4.jar}:\
+    ${file.reference.PropertiesManager.jar}:\
+    ${file.reference.XMLUtilities.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
